ignore mac .DS_store

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 output/**
+.DS_store
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
