--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,14 +4,31 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Run generator.py",
+            "label": "Run generator",
             "type": "shell",
-            "command": "python3 generator.py",
+            "command": "python3",
+            "args": [
+                "${workspaceFolder}/generate_labels.py"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": "$python"
+        }
+        {
+            "label": "Run tests",
+            "type": "shell",
+            "command": "${command:python.interpreterPath}",
+            "args": [
+                "-m",
+                "pytest"
+            ],
             "group": {
                 "kind": "test",
                 "isDefault": true
             },
-            "problemMatcher": []
+            "problemMatcher": "$python"
         }
     ]
 }
