--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,22 @@
 {
-    "editor.formatOnSave": true,
-    "files.trimTrailingWhitespace": true,
-    "python.testing.pytestArgs": [
-        "."
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
+  "editor.formatOnSave": true,
+  "editor.rulers": [120],
+  "files.trimTrailingWhitespace": true,
+  "python.testing.pytestArgs": ["."],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true,
+  "pylint.args": ["--max-line-length=120"],
+  "black-formatter.args": ["--line-length", "120"],
+  "cSpell.words": [
+    "bhcs",
+    "ezodf",
+    "Gridfinity",
+    "nyloc",
+    "opendoc",
+    "pozi",
+    "pozidriv",
+    "shcs",
+    "torx",
+    "xprint"
+  ]
 }
