--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,14 +9,18 @@
   "black-formatter.args": ["--line-length", "120"],
   "cSpell.words": [
     "bhcs",
+    "circumradius",
     "ezodf",
     "Gridfinity",
     "nyloc",
     "opendoc",
     "pozi",
     "pozidriv",
+    "rects",
     "shcs",
     "torx",
+    "viewbox",
+    "witdth",
     "xprint"
   ]
 }
